--- a/public/acm/AlaatvCustomFiles/components/AjaxLogin/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/AjaxLogin/style.scss
@@ -1,28 +1,51 @@
 #AlaaAjaxLoginModal {
-  .modal-header {
-    background: #ff9000;
-    border: none;
-    -webkit-box-shadow: 0px 6px 5px -3px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 6px 5px -3px rgba(0,0,0,0.75);
-    box-shadow: 0px 1px 5px -1px rgba(0,0,0,0.75);
+    .modal-content {
+        border: 1px solid rgb(238, 238, 238);
 
-    .modal-title {
-      color: white;
-      font-weight: bold;
+        .modal-header {
+            background: #f2f2f2;
+            border: none;
+            -webkit-box-shadow: 0 6px 5px -3px rgba(189, 189, 189, 0.75);
+            -moz-box-shadow: 0 6px 5px -3px rgba(189, 189, 189, 0.75);
+            box-shadow: 0 1px 5px -1px rgba(189, 189, 189, 0.75);
+            padding-right: 50px;
+
+            .modal-title {
+                color: #848484;
+                font-weight: bold;
+            }
+            .modal-alaaLogo {
+                position: absolute;
+                top: 5px;
+                right: 15px;
+                width: 30px;
+            }
+        }
+
+        .modal-body {
+            input[name="mobile"],
+            input[name="password"] {
+                direction: ltr;
+            }
+        }
+
+        .modal-footer {
+            justify-content: center;
+            padding: 0;
+
+            button {
+                width: 100%;
+                margin: 0;
+                background: #34e9ff;
+                color: #373737;
+                box-shadow: 0 -2px 7px -1px #c8c6c6;
+                padding: 1rem 2.5rem;
+                cursor: pointer;
+                line-height: 1.5;
+                user-select: none;
+                text-align: center;
+                border: solid 1px #75f0ff;
+            }
+        }
     }
-  }
-  .modal-body {
-    input[name="mobile"],
-    input[name="password"]{
-      direction: ltr;
-    }
-  }
-  .modal-footer {
-    justify-content: center;
-    padding: 0;
-    button {
-      width: 100%;
-      margin: 0;
-    }
-  }
 }
