--- a/public/acm/AlaatvCustomFiles/css/page/pages/content-search/content-search.css
+++ b/public/acm/AlaatvCustomFiles/css/page/pages/content-search/content-search.css
@@ -151,125 +151,9 @@
     font-size: 10px;
 }
 
-/*.searchResult .listType .item .content .detailes {*/
-/*    flex-flow: row;*/
-/*}*/
-
-/*.searchResult .listType .item .content .detailes .videoDetaileWrapper {*/
-/*    padding-left: 100px;*/
-/*    padding-right: 20px;*/
-/*    line-height: 25px;*/
-
-/*    !*padding-right: 20px;*!*/
-/*    !*padding-left: 0;*!*/
-/*    !*line-height: 25px;*!*/
-/*    !*-webkit-box-flex: 0;*!*/
-/*    !*-ms-flex: 0 0 50%;*!*/
-/*    !*flex: 0 0 50%;*!*/
-/*    !*max-width: 50%;*!*/
-/*}*/
-/*.searchResult .listType .item .content .detailes .videoDetaileWrapper svg {*/
-/*    display: inline-block;*/
-/*    width: 20px;*/
-/*    margin-right: -5px;*/
-/*    margin-left: 2px;*/
-/*}*/
-/*.searchResult .listType .item .content .detailes .videoDescription {*/
-/*    padding-right: 20px;*/
-/*    padding-left: 100px;*/
-/*    line-height: 20px;*/
-/*    text-align: justify;*/
-
-/*    !*padding-right: 20px;*!*/
-/*    !*padding-left: 0;*!*/
-/*    !*line-height: 20px;*!*/
-/*    !*-webkit-box-flex: 0;*!*/
-/*    !*-ms-flex: 0 0 50%;*!*/
-/*    !*flex: 0 0 50%;*!*/
-/*    !*max-width: 50%;*!*/
-/*    !*text-align: justify;*!*/
-/*}*/
-
-/*.searchResultColumn .searchResult .carouselType {*/
-/*    margin-bottom: 20px;*/
-/*}*/
-
-/*.searchResult .carouselType .ScrollCarousel .item.loadingItem {*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    justify-content: center;*/
-/*    height: auto;*/
-/*    box-shadow: 0 1px 4px 1px rgba(55,41,84,.3) !important;*/
-/*    margin-bottom: 5px;*/
-/*    margin-top: 5px;*/
-/*    background-color: rgb(255, 255, 255);*/
-/*    min-height: 150px;*/
-/*}*/
-
-/*.searchResult .listType .item.loadingItem {*/
-/*    min-height: 150px;*/
-/*}*/
-/*.searchResult .listType .item.loadingItem .pic {*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    justify-content: center;*/
-/*    height: auto;*/
-/*    background: #e1e0e0;*/
-/*}*/
-/*.searchResult .listType .item.loadingItem .pic .fa {*/
-/*    font-size: 70px;*/
-/*}*/
-/*.searchResult .listType .item.loadingItem .content {*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    justify-content: center;*/
-/*    height: auto;*/
-/*}*/
-
-/*.searchResult .listType .item .content .detailes .productPriceWrapper {*/
-/*    position: absolute;*/
-/*    left: 20px;*/
-/*    top: 0;*/
-/*}*/
-/*.searchResult .listType .item .content .detailes .videoOrder {*/
-/*    position: absolute;*/
-/*    left: 0;*/
-/*    top: 0;*/
-/*    color: white;*/
-/*}*/
-/*.searchResult .listType .item .content .detailes .videoOrder .videoOrder-title {*/
-/*    display: inline-block;*/
-/*    color: #ff9000;*/
-/*}*/
-/*.searchResult .listType .item .content .detailes .videoOrder .videoOrder-number {*/
-/*    font-size: 20px;*/
-/*    line-height: 37px;*/
-/*    border: solid 1px #ff9000;*/
-/*    border-radius: 100%;*/
-/*    width: 35px;*/
-/*    height: 35px;*/
-/*    text-align: center;*/
-/*    background-color: #ff9000;*/
-/*    display: inline-block;*/
-/*    margin: 0 5px;*/
-/*}*/
-/*.searchResult .listType .item .content .detailes .videoOrder .videoOrder-om {*/
-/*    !*display: inline-block;*!*/
-/*    color: #ff9000;*/
-/*    display: none;*/
-/*}*/
-
 .SearchColumnsWrapper {
     justify-content: center;
 }
-
-/*.searchResult .listType .item.a--gtm-eec-product {*/
-/*    background: #d2d2d2 !important;*/
-/*}*/
-
-/*.searchResult .listType .item.a--gtm-eec-product .content .detailes {*/
-/*    text-align: justify;*/
-/*}*/
 
 .btnShowSearchBoxInMobileView {
     width: 100%;
@@ -308,6 +192,28 @@
     padding-left: 0;
     padding-right: 7px;
 }
+
+
+.productAttributes {
+    display: flex;
+    flex-wrap: wrap;
+}
+.productAttributes .productAttributes-item {
+    display: flex;
+    width: 33%;
+    align-items: center;
+    margin-bottom: 25px;
+}
+.productAttributes .productAttributes-item .productAttributes-item-icon {
+
+}
+.productAttributes .productAttributes-item .productAttributes-item-icon svg {
+    width: 35px;
+}
+.productAttributes .productAttributes-item .productAttributes-item-value {
+    padding-right: 5px;
+}
+
 @media only screen and (min-width: 1700px)  {
 
     .SearchColumnsWrapper.maxWidth .SearchBoxFilterColumn{
@@ -411,22 +317,6 @@
         padding-left: 5px;
         padding-right: 5px;
     }
-
-    /*.searchResult .listType .item  {*/
-    /*    display: block;*/
-    /*    -webkit-box-shadow: 0 0 5px -2px rgba(0,0,0,0.75);*/
-    /*    -moz-box-shadow: 0 0 5px -2px rgba(0,0,0,0.75);*/
-    /*    box-shadow: 0 0 5px -2px*/
-    /*    rgba(0,0,0,0.75);*/
-    /*}*/
-    /*.searchResult .listType .item .pic,*/
-    /*.searchResult .listType .item .content {*/
-    /*    width: 100%;*/
-    /*}*/
-
-    /*.searchResult .listType .item .content .detailes .videoDescription {*/
-    /*    padding-left: 0 !important;*/
-    /*}*/
 }
 @media only screen and (min-width: 1190px)  {
     .ProductAndSetAndVideoWraper {
@@ -442,5 +332,18 @@
     }
     .PamphletAndArticleWraper {
         max-width: 100%;
+    }
+}
+@media only screen and (max-width: 700px)  {
+    .productAttributes .productAttributes-item {
+        width: 50%;
+    }
+}
+@media only screen and (max-width: 400px)  {
+    .productAttributes .productAttributes-item .productAttributes-item-icon svg {
+        width: 15px;
+    }
+    .productAttributes .productAttributes-item {
+        margin-bottom: 5px;
     }
 }
