--- a/public/acm/AlaatvCustomFiles/css/page/pages/content-search/searchResult.scss
+++ b/public/acm/AlaatvCustomFiles/css/page/pages/content-search/searchResult.scss
@@ -41,7 +41,7 @@
             }
 
             &.a--gtm-eec-product {
-                background: #d2d2d2 !important;
+                //background: #d2d2d2 !important;
 
                 .content {
                     .detailes {
@@ -77,7 +77,7 @@
                     h2 {
                         font-size: 1.2rem;
                         font-weight: bold;
-                        margin-bottom: 15px;
+                        margin-bottom: 0;
                     }
                 }
 
