--- a/theme/default/src/sass/demo/demo12/style.scss
+++ b/theme/default/src/sass/demo/demo12/style.scss
@@ -15,42 +15,42 @@
 @import "../../framework/components/general/config"; // 1 KB
 
 //== 3: Bootstrap Include
-@import "../../framework/vendors/bootstrap/bootstrap.scss"; // 234 KB
+@import "../../framework/vendors/bootstrap/bootstrap.scss"; // 190 KB
 
 //== 4: Framework Components
-@import "../../framework/include"; // 554 KB
+@import "../../framework/include"; // 357 KB
 
-////== 5: Snippets
-//@import "../../snippets/include";// 560 KB
-//////////////////////////////////////////////////////////////////
-/////////////// DO NOT MODIFY ABOVE INCLUDE ORDER ////////////////
-//////////////////////////////////////////////////////////////////
-
-//== 6: Demo Config
-@import "demo-config";
-@import "base/_config";
-@import "header/_config";
-@import "aside/_config";
-@import "menu-header/_config";
-@import "menu-aside/_config";
-@import "footer/_config";
-
-//== 7: Demo Layout
-@import "base/page";
-@import "base/body"; // 561 KB
-
-@import "header/brand"; // (need)
-@import "header/header"; // (need)
-@import "header/topbar"; // (need)
-@import "header/search"; // (need) // 579 KB
-
-@import "aside/aside-left"; // (need)
-//@import "aside/aside-right";
-@import "aside/aside-header-menu-mobile"; // 587 KB
-
-@import "menu-header/menu"; // 637 KB
-@import "menu-aside/menu"; // 688 KB
-
-//@import "subheader/default";
-
-@import "footer/default"; // 691 KB
+//////== 5: Snippets
+////@import "../../snippets/include";// 560 KB
+////////////////////////////////////////////////////////////////////
+///////////////// DO NOT MODIFY ABOVE INCLUDE ORDER ////////////////
+////////////////////////////////////////////////////////////////////
+//
+////== 6: Demo Config
+//@import "demo-config";
+//@import "base/_config";
+//@import "header/_config";
+//@import "aside/_config";
+//@import "menu-header/_config";
+//@import "menu-aside/_config";
+//@import "footer/_config";
+//
+////== 7: Demo Layout
+//@import "base/page";
+//@import "base/body"; // 561 KB
+//
+//@import "header/brand"; // (need)
+//@import "header/header"; // (need)
+//@import "header/topbar"; // (need)
+//@import "header/search"; // (need) // 579 KB
+//
+//@import "aside/aside-left"; // (need)
+////@import "aside/aside-right";
+//@import "aside/aside-header-menu-mobile"; // 587 KB
+//
+//@import "menu-header/menu"; // 637 KB
+//@import "menu-aside/menu"; // 688 KB
+//
+////@import "subheader/default";
+//
+//@import "footer/default"; // 691 KB
