--- a/public/acm/AlaatvCustomFiles/css/page/pages/content-search/content-search.css
+++ b/public/acm/AlaatvCustomFiles/css/page/pages/content-search/content-search.css
@@ -107,12 +107,6 @@
     display: inline-block;
     position: unset;
 }
-.m-alert__icon span {
-    position: absolute;
-    right: 0;
-    top: 0;
-    height: 100%;
-}
 .m-alert__text {
     display: inline-block;
 }
@@ -161,7 +155,7 @@
     justify-content: center;
 }
 
-.notFoundMessage {
+.searchResultColumn .notFoundMessage {
     display: none;
 }
 
