--- a/public/acm/AlaatvCustomFiles/components/Alist/type1/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/Alist/type1/style.scss
@@ -34,6 +34,8 @@
                 max-width: 100%;
             }
             .a--list1-title a {
+                position: relative;
+                z-index: 9999;
                 color: inherit;
                 text-decoration: none;
             }
