--- a/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
@@ -343,7 +343,7 @@
                 padding: 5px 10px;
                 height: 45px;
                 display: flex;
-                align-items: flex-start;
+                align-items: center;
 
                 a {
                     top: 0;
