--- a/public/acm/AlaatvCustomFiles/css/page/product/previewSetsOfProduct.css
+++ b/public/acm/AlaatvCustomFiles/css/page/product/previewSetsOfProduct.css
@@ -1,5 +1,3 @@
-
-/*entekhabeFarsang*/
 .previewSetsOfProduct {
     position: relative;
 }
@@ -193,4 +191,10 @@
 .farsangStepProgressBar .farsangStepProgressBar-step .fa {
     font-size: 1.8rem;
     cursor: pointer;
+}
+
+.selectSetOfProductTopreview .selectProductArrow {
+    position: absolute;
+    left: -5px;
+    bottom: 20px;
 }
