--- a/public/acm/AlaatvCustomFiles/css/page/user/dashboard.css
+++ b/public/acm/AlaatvCustomFiles/css/page/user/dashboard.css
@@ -213,7 +213,21 @@
 
 
 
-
+.contentsetOfProductCol .m-portlet__body {
+    padding-top: 50px;
+    margin-top: 20px;
+    position: relative;
+}
+.contentsetOfProductCol .m-portlet__body .titleOfSet {
+    position: absolute;
+    top: -20px;
+    background: #fc0;
+    padding: 10px;
+    right: 10px;
+    -webkit-box-shadow: 0 1px 15px 1px rgba(69,65,78,.1);
+    box-shadow: 0 1px 15px 1px rgba(69,65,78,.1);
+    color: #000;
+}
 
 #smallScreenModal .modal-body  > .m-portlet > .m-portlet__body > .nav.nav-pills,
 .contentsetOfProductCol > .m-portlet > .m-portlet__body > .nav.nav-pills {
