--- a/public/acm/videojs/skins/alaa-theme/videojs.css
+++ b/public/acm/videojs/skins/alaa-theme/videojs.css
@@ -2341,7 +2341,7 @@ video::-webkit-media-text-track-display {
 }
 
 .vjs-seeking .vjs-loading-spinner,
-.vjs-waiting {
+.vjs-waiting .vjs-loading-spinner {
     display: block
 }
 
