preview sets bug fix

--- a/public/acm/AlaatvCustomFiles/components/Alist/type1/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/Alist/type1/style.scss
@@ -84,5 +84,13 @@
             width: auto;
             height: auto;
         }
+
+
+        &.noAction {
+            .a--list1-content {
+                padding: 0 5px 0 5px;
+            }
+        }
     }
+
 }
