--- a/public/acm/AlaatvCustomFiles/css/page/product/landing/8.css
+++ b/public/acm/AlaatvCustomFiles/css/page/product/landing/8.css
@@ -138,6 +138,7 @@
 }
 .lessonsTimesWraper .lessonsTimesWraper-footer .lessonsTimesWraper-footer-slogan {
     font-size: 30px;
+    line-height: 45px;
     color: white;
     text-align: center;
     background: #ff0f10;
