--- a/public/acm/AlaatvCustomFiles/css/customStyle/font.css
+++ b/public/acm/AlaatvCustomFiles/css/customStyle/font.css
@@ -11,3 +11,9 @@ h1 {
 h2 {
     font-size: 1.4rem;
 }
+
+@media only screen and (max-width: 500px) {
+    body, html {
+        font-size: 12px;
+    }
+}
