--- a/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
+++ b/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
@@ -194,7 +194,7 @@ select.form-control {
         padding-left: 5px;
         padding-right: 5px;
     }
-    .m-portlet__body {
-        padding: 5px !important;
+    .m-portlet .m-portlet__body {
+        padding: 2.2rem 5px 5px 5px;
     }
 }
